# 40-ai-ml-projects-for-beginners

./: .gitignore  AGENTS.md  FINAL_PROJECT_VERIFICATION_REPORT.md  README.md  app.py  pyproject.toml
AI Agents/AI API Intelligence Agent/: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml
AI Agents/AI API Intelligence Agent/configs/: settings.yaml
AI Agents/AI API Intelligence Agent/docs/: agent_workflow.md  architecture.md  zero_to_hero_study_handbook.md
AI Agents/AI API Intelligence Agent/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  secret-template.yaml  service.yaml
AI Agents/AI API Intelligence Agent/notebooks/: zero_to_hero_api_intelligence_agent.executed.ipynb  zero_to_hero_api_intelligence_agent.ipynb
AI Agents/AI API Intelligence Agent/scripts/: execute_notebook_sequential.py  run_demo.py
AI Agents/AI API Intelligence Agent/streamlit_app/: Home.py
AI Agents/AI API Intelligence Agent/tests/: conftest.py  test_auth.py  test_cache.py  test_config.py  test_connectors.py  test_fastapi.py  test_memory.py  test_reporting.py  test_runner.py  test_tools.py
AI Agents/AI Task Planning & Productivity Agent/: .gitignore  FINAL_PROJECT_VERIFICATION_REPORT.md  README.md  app.py  pyproject.toml  streamlit_app.py
AI Agents/AI Task Planning & Productivity Agent/configs/: config.yaml
AI Agents/AI Task Planning & Productivity Agent/docs/: Zero_to_Hero_Study_Handbook.md  agent_graph.mmd  architecture.md
AI Agents/AI Task Planning & Productivity Agent/notebooks/: 01_zero_to_hero_productivity_agent.ipynb
AI Agents/AI Task Planning & Productivity Agent/scripts/: generate_artifacts.py  run_notebook.py
AI Agents/AI Task Planning & Productivity Agent/tests/: test_agent_workflow.py  test_api.py  test_calendar.py  test_dependency_planner.py  test_memory.py  test_parser.py  test_prioritization.py  test_scheduler.py
AI Agents/Production CrewAI Multi-Agent Platform/: .gitignore  FINAL_PROJECT_VERIFICATION_REPORT.md  README.md  app.py  pyproject.toml
AI Agents/Production CrewAI Multi-Agent Platform/configs/: agents.yaml  settings.yaml
AI Agents/Production CrewAI Multi-Agent Platform/docs/: Zero_to_Hero_Study_Handbook.md  architecture.md  screenshots.md
AI Agents/Production CrewAI Multi-Agent Platform/notebooks/: project29_enterprise_mult_agent_platform.ipynb
AI Agents/Production CrewAI Multi-Agent Platform/scripts/: run_api.py  (+2 more)
AI Agents/Production Internet AI Agent/: .gitignore  README.md  app.py  pyproject.toml
AI Agents/Production LangGraph Multi-Agent Platform/: .gitignore  README.md  pyproject.toml
Core Machine Learning and Data Science/Building a Predictive Keyboard Model/: FINAL_PROJECT_VERIFICATION_REPORT.md  README.md  pyproject.toml
Core Machine Learning and Data Science/Feature Selection with 500+ Columns/: .gitignore  PROJECT_COMPLETION_REPORT.md  README.md  pyproject.toml
Core Machine Learning and Data Science/Geospatial Clustering/: FINAL_PROJECT_VERIFICATION_REPORT.md  README.md  pyproject.toml
Core Machine Learning and Data Science/Hybrid Machine Learning Model/: .gitignore  FINAL_PROJECT_VERIFICATION_REPORT.md  README.md  _gen_notebooks.py  app.py  pyproject.toml
Core Machine Learning and Data Science/Smart Loan Recovery System/: .gitignore  FINAL_PROJECT_VERIFICATION_REPORT.md  README.md  app.py  loan-recovery.csv  main.py  pyproject.toml  smart_loan_recovery.ipynb
LLM Applications/Production AI Resume Screener/: .gitignore  README.md  app.py  pyproject.toml  resume_ai.sqlite3-shm  resume_ai.sqlite3-wal
LLMs, RAG, and Smart Search/Build Your First RAG System From Scratch/: FINAL_PROJECT_VERIFICATION_REPORT.md  README.md  app.py  pyproject.toml  pytest.ini  rag_config.toml
LLMs, RAG, and Smart Search/Build a Local RAG System with Open-Source LLMs/: .gitignore  FINAL_PROJECT_VERIFICATION_REPORT.md  README.md  pyproject.toml
LLMs, RAG, and Smart Search/Building a Document Q&A System/: .gitignore  README.md  pyproject.toml
LLMs, RAG, and Smart Search/Connect Your LLM to Google Sheets/: .gitignore  README.md  pyproject.toml
LLMs, RAG, and Smart Search/Create an AI SQL Assistant with LangChain/: .gitignore  README.md  pyproject.toml
LLMs, RAG, and Smart Search/Hybrid Real-Time AI Research Assistant/: README.md  pyproject.toml
LLMs, RAG, and Smart Search/Production AI Reasoning Agent/: README.md  app.py  pyproject.toml
LLMs, RAG, and Smart Search/Production Semantic Search Engine/: .gitignore  README.md  app.py  pyproject.toml
LLMs/Production Domain LLM Fine-Tuning Framework/: .gitignore  README.md  docker-compose.yaml  pyproject.toml
LLMs/Production LLM Fine-Tuning Framework/: README.md  pyproject.toml
LLMs/Production PEFT Fine-Tuning Platform/: .gitignore  AGENTS.md  README.md  app.py  pyproject.toml  streamlit_app.py
MLOps, UI, and Deployment/Build Your First AI App UI with Streamlit/: .gitignore  README.md  main.py  pyproject.toml
MLOps, UI, and Deployment/Build a Live Machine Learning App in 5 Minutes/: FINAL_PROJECT_VERIFICATION_REPORT.md  README.md  app.py  pyproject.toml  pytest.ini
MLOps, UI, and Deployment/Deploy Your AI App for Free in 3 Clicks/: .dockerignore  .gitignore  Dockerfile.api  FINAL_PROJECT_VERIFICATION_REPORT.md  README.md  api_app.py  app.py  pyproject.toml  requirements-api.txt  requirements-automl.txt  requirements-dev.txt  requirements.txt
MLOps, UI, and Deployment/Deploy Your First ML Model as a REST API/: .dockerignore  .gitignore  Dockerfile  FINAL_PROJECT_VERIFICATION_REPORT.md  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  setup.py
MLOps, UI, and Deployment/MLOps Pipeline using Apache Airflow/: FINAL_PROJECT_VERIFICATION_REPORT.md  README.md  config.yaml  pyproject.toml  requirements.txt
MLOps, UI, and Deployment/Packaging Machine Learning Models/: .dockerignore  .gitignore  Dockerfile  FINAL_PROJECT_VERIFICATION_REPORT.md  Makefile  README.md  pyproject.toml
Multimodal AI/Production Multimodal AI Platform/: .gitignore  README.md  ZERO_TO_HERO_STUDY_HANDBOOK.md  app.py  mcp_server.py  pyproject.toml  streamlit_app.py
(+2372 files in other folders)
