[project]
name = "ai-api-intelligence-agent"
version = "0.1.0"
description = "Production-grade AI API Intelligence Agent with LangGraph, Ollama, FastAPI, and Streamlit"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "apscheduler>=3.10.4",
  "chromadb>=1.0.15",
  "duckdb>=1.3.2",
  "fastapi>=0.115.0",
  "httpx>=0.28.1",
  "hydra-core>=1.3.2",
  "jinja2>=3.1.6",
  "langchain>=0.3.26",
  "langchain-core>=0.3.74",
  "langchain-ollama>=0.3.6",
  "langgraph>=0.6.2",
  "loguru>=0.7.3",
  "markdown-it-py>=3.0.0",
  "matplotlib>=3.10.5",
  "mlflow>=3.3.0",
  "orjson>=3.11.1",
  "pandas>=2.3.1",
  "passlib[bcrypt]>=1.7.4",
  "plotly>=6.3.0",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "pyjwt>=2.10.1",
  "psutil>=7.0.0",
  "pynvml>=12.0.0",
  "python-dotenv>=1.1.1",
  "python-multipart>=0.0.20",
  "pyyaml>=6.0.2",
  "redis>=6.4.0",
  "reportlab>=4.4.3",
  "rich>=14.1.0",
  "sentence-transformers>=5.1.0",
  "sqlalchemy>=2.0.42",
  "streamlit>=1.48.0",
  "tenacity>=9.1.2",
  "typer>=0.16.0",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
notebook = [
  "ipykernel>=6.30.1",
  "jupyter>=1.1.1",
]

[dependency-groups]
dev = [
  "pytest>=8.4.1",
  "pytest-asyncio>=1.2.0",
  "pytest-cov>=6.2.1",
  "respx>=0.22.0",
  "ruff>=0.12.8",
]

[project.scripts]
agent = "api_intel_agent.cli.main:app"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
extend-exclude = ["notebooks/*.ipynb"]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api_intel_agent"]
