[project]
name = "task-planning-productivity-agent"
version = "0.1.0"
description = "Production-grade AI task planning and productivity agent with LangGraph, Ollama, FastAPI, and Streamlit"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "langgraph>=0.6.0",
  "langchain>=0.3.26",
  "langchain-ollama>=0.3.4",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "fastapi>=0.115.14",
  "uvicorn>=0.35.0",
  "streamlit>=1.46.1",
  "duckdb>=1.3.1",
  "chromadb>=1.0.13",
  "sentence-transformers>=5.0.0",
  "rapidfuzz>=3.13.0",
  "dateparser>=1.2.2",
  "networkx>=3.5",
  "rich>=14.0.0",
  "typer>=0.16.0",
  "hydra-core>=1.3.2",
  "mlflow>=2.14.2",
  "orjson>=3.10.18",
  "httpx>=0.28.1",
  "icalendar>=6.3.1",
  "pyjwt>=2.10.1",
  "python-multipart>=0.0.20",
  "plotly>=6.2.0",
  "pandas>=2.3.0",
  "psutil>=6.0.0",
  "tenacity>=9.1.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1",
  "pytest-asyncio>=1.0.0",
  "pytest-cov>=6.2.1",
  "ruff>=0.12.1",
  "mypy>=1.16.1",
  "ipykernel>=6.29.5",
  "jupyter>=1.1.1",
]

[project.scripts]
task-agent = "task_planning_agent.cli:app"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated; install `httpx2` instead\\.",
]

[tool.ruff]
line-length = 100
extend-exclude = ["notebooks/*.ipynb"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["task_planning_agent"]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/task_planning_agent"]
