[project]
name = "production-crewai-multi-agent-platform"
version = "0.1.0"
description = "Production-grade multi-agent AI collaboration platform with CrewAI, LangGraph, FastAPI, Streamlit, MCP, and persistent memory"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "beautifulsoup4>=4.13.4",
  "chromadb>=1.0.13",
  "crewai>=0.130.0",
  "duckduckgo-search>=8.1.1",
  "fastapi>=0.116.0",
  "httpx>=0.28.1",
  "hydra-core>=1.3.2",
  "langchain>=0.3.26",
  "langgraph>=0.6.0",
  "loguru>=0.7.3",
  "mlflow>=2.14.1",
  "orjson>=3.10.18",
  "playwright>=1.53.0",
  "plotly>=6.2.0",
  "polars>=1.31.0",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "pypdf>=5.8.0",
  "python-multipart>=0.0.20",
  "pyyaml>=6.0.2",
  "rich>=14.0.0",
  "sentence-transformers>=5.0.0",
  "sqlalchemy>=2.0.41",
  "streamlit>=1.46.1",
  "tenacity>=9.1.2",
  "trafilatura>=2.0.0",
  "typer>=0.16.0",
  "uvicorn>=0.35.0",
  "wikipedia-api>=0.8.1",
  "psutil>=7.0.0",
  "pynvml>=12.0.0",
  "markdown>=3.8.2",
  "fpdf2>=2.8.2",
]

[dependency-groups]
dev = [
  "ipykernel>=6.29.5",
  "jupyter>=1.1.1",
  "pytest>=8.4.1",
  "pytest-asyncio>=1.0.0",
  "pytest-cov>=6.2.1",
  "ruff>=0.12.1",
]

[project.scripts]
crew-platform = "crew_platform.cli.main:app"
crew-platform-api = "crew_platform.api.main:run"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
extend-exclude = ["notebooks/*.ipynb"]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crew_platform"]
