[project]
name = "langgraph-multi-agent-platform"
version = "0.1.0"
description = "Production-grade multi-agent knowledge workflow platform with LangGraph"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Ahmad" }]
dependencies = [
  "langgraph>=0.2.74",
  "langchain>=0.3.27",
  "langchain-core>=0.3.74",
  "pydantic>=2.11.7",
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
  "streamlit>=1.46.1",
  "sqlalchemy>=2.0.41",
  "chromadb>=1.0.15",
  "sentence-transformers>=5.0.0",
  "hydra-core>=1.3.2",
  "typer>=0.16.0",
  "rich>=14.0.0",
  "plotly>=6.2.0",
  "httpx>=0.28.1",
  "beautifulsoup4>=4.13.4",
  "trafilatura>=2.0.0",
  "mlflow>=3.1.4",
  "networkx>=3.5",
  "graphviz>=0.21",
  "duckduckgo-search>=8.1.1",
  "ddgs>=9.6.1",
  "wikipedia>=1.4.0",
  "pypdf>=5.8.0",
  "pandas>=2.3.1",
  "markdown>=3.8.2",
  "python-dotenv>=1.1.1",
  "orjson>=3.10.18",
  "pyyaml>=6.0.2",
  "tenacity>=9.1.2",
  "psutil>=6.1.0",
  "nvidia-ml-py>=12.575.51",
  "weasyprint>=66.0",
  "langchain-community>=0.3.27",
  "langchain-text-splitters>=0.3.9",
  "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1",
  "pytest-asyncio>=1.0.0",
  "pytest-cov>=6.2.1",
  "ruff>=0.12.2",
  "mypy>=1.16.1",
  "types-requests>=2.32.4.20250611",
]

[project.scripts]
langgraph-platform = "langgraph_platform.cli.app:app"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_platform"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [".venv", "artifacts", "assets/screenshots"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "W", "B", "RUF"]
ignore = ["E501", "RUF005", "RUF012", "UP042"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["notebooks", "artifacts", "assets/screenshots"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
  "ignore:.*asyncio.iscoroutinefunction.*:DeprecationWarning:chromadb.*",
]

[tool.coverage.run]
source = ["src/langgraph_platform"]

[dependency-groups]
dev = [
  "pytest>=8.4.1",
  "pytest-asyncio>=1.0.0",
  "pytest-cov>=6.2.1",
  "ruff>=0.12.2",
  "mypy>=1.16.1",
]
