[project]
name = "predictive-keyboard"
version = "0.1.0"
description = "Predictive keyboard system with language models from n-gram to Transformer"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0",
    "nltk>=3.8",
    "spacy>=3.7",
    "scikit-learn>=1.4",
    "streamlit>=1.32",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",
    "wordcloud>=1.9",
    "umap-learn>=0.5.6",
    "pandas>=2.2",
    "numpy>=1.26",
    "tqdm>=4.66",
    "ipykernel>=6.29",
    "numba>=0.58",
    "nbconvert>=7.17.1",
    "jupyter-client>=8.9.1",
    "datasets>=5.0.0",
    "gensim>=4.4.0",
    "tokenizers>=0.23.1",
    "psutil>=7.2.2",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["*.ipynb", ".venv", ".ruff_cache"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.setuptools.packages.find]
include = ["utils*"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.19",
]
