[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feature-selection-500"
version = "1.0.0"
description = "End-to-end feature selection project for 500+ column datasets"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "scipy>=1.11",
    "openml>=0.14",
    "shap>=0.44",
    "tqdm>=4.66",
    "pyarrow>=14.0",
    "joblib>=1.3",
]

[project.optional-dependencies]
notebooks = [
    "jupyter>=1.0",
    "nbformat>=5.9",
    "ipykernel>=6.0",
    "nbconvert>=7.16",
]
automl = [
    "flaml>=2.1",
    "pycaret>=3.2",
    "lazypredict>=0.2.12",
    "xgboost>=2.0",
    "lightgbm>=4.1",
    "catboost>=1.2",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
