[project]
name = "geospatial-clustering"
version = "0.1.0"
description = "Production-quality geospatial clustering and location-intelligence project"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "pandas>=2.1.4,<2.3.0",
  "numpy>=1.26.4,<2.0.0",
  "scikit-learn>=1.3.2,<1.5.0",
  "scipy>=1.11.4,<1.12.0",
  "matplotlib>=3.7.5,<3.8.0",
  "seaborn>=0.13.2",
  "plotly>=5.24.1",
  "folium>=0.17.0",
  "geopandas>=1.0.1",
  "pyproj>=3.6.1",
  "geopy>=2.4.1",
  "hdbscan>=0.8.40",
  "streamlit>=1.38.0",
  "jupyter>=1.1.1",
  "nbformat>=5.10.4",
  "ipykernel>=6.29.5",
  "flaml[automl]>=2.3.1",
  "lazypredict>=0.2.16",
  "pycaret>=3.3.2",
  "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "ruff>=0.6.9",
  "mypy>=1.11.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "outputs", "data/raw", "data/processed"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "smoke_*.py"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
exclude = ["notebooks", "outputs", "data"]

[tool.uv]
package = false
