[project]
name = "hybrid-ml-forecast"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "plotly>=5.14",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
    "torch>=2.0",
    "lazypredict>=0.2",
    "pycaret[full]==4.0.0a8",
    "flaml>=2.0",
    "shap>=0.42",
    "streamlit>=1.28",
    "scipy>=1.11",
    "scikit-optimize>=0.9",
    "nbformat>=5.9",
    "nbconvert>=7.16",
    "ipykernel>=6.29",
    "jupyter>=1.0",
    "pytest>=8.2",
    "pytest-timeout>=2.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"
