[project]
name = "production-ai-resume-screener"
version = "0.1.0"
description = "Production-grade AI resume screening and talent intelligence platform"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Ahmad" }]
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "streamlit>=1.46.0",
  "typer>=0.16.0",
  "rich>=14.0.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "email-validator>=2.2.0",
  "sqlalchemy>=2.0.40",
  "chromadb>=1.0.15",
  "langchain>=0.3.27",
  "langchain-ollama>=0.3.3",
  "sentence-transformers>=5.0.0",
  "numpy>=2.3.0",
  "pandas>=2.3.0",
  "plotly>=6.2.0",
  "pymupdf>=1.26.0",
  "python-docx>=1.2.0",
  "pytesseract>=0.3.13",
  "opencv-python>=4.12.0.88",
  "hydra-core>=1.3.2",
  "mlflow>=3.1.0",
  "httpx>=0.28.1",
  "orjson>=3.10.0",
  "python-multipart>=0.0.20",
  "jinja2>=3.1.6",
  "markdown-it-py>=3.0.0",
  "reportlab>=4.4.2",
  "psutil>=7.0.0",
  "mcp>=1.10.0",
]

[project.optional-dependencies]
ocr = [
  "paddleocr>=3.0.0",
]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.0.0",
  "pytest-cov>=6.2.1",
  "ruff>=0.12.0",
  "mypy>=1.16.0",
]

[project.scripts]
resume-ai = "resume_ai.cli.main:app"
resume-ai-api = "resume_ai.api.main:run"
resume-ai-dashboard = "resume_ai.ui.app:run"
resume-ai-mcp = "resume_ai.mcp.server:run"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q -p no:langsmith"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/resume_ai"]
