[project]
name = "enterprise-document-qa-local"
version = "0.1.0"
description = "Production-grade local Document Q&A system with Ollama + ChromaDB"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "aiohttp>=3.10.5",
  "bert-score>=0.3.13",
  "chromadb>=1.0.12",
  "langchain-text-splitters>=0.3.2",
  "loguru>=0.7.2",
  "matplotlib>=3.9.2",
  "nltk>=3.9.1",
  "numpy>=2.1.0",
  "ollama>=0.5.1",
  "pandas>=2.2.3",
  "plotly>=5.24.1",
  "psutil>=6.1.0",
  "rank-bm25>=0.2.2",
  "rouge-score>=0.1.2",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.1",
  "pypdf>=5.1.0",
  "python-dotenv>=1.0.1",
  "scikit-learn>=1.5.2",
  "streamlit>=1.40.2",
  "typer>=0.12.5",
]

[dependency-groups]
dev = [
  "ipykernel>=6.29.5",
  "jupyter>=1.1.1",
  "nbformat>=5.10.4",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.9",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "integration: requires live Ollama server and pulled models",
]

[tool.ruff]
line-length = 100
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.hatch.build.targets.wheel]
packages = ["src/local_rag"]
