[project]
name = "hybrid-real-time-ai-research-assistant"
version = "0.1.0"
description = "Production-grade local-first hybrid RAG assistant with LangGraph, ChromaDB, Ollama, and live web search"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "chromadb>=1.0.12",
  "ddgs>=9.14.4",
  "httpx>=0.28.1",
  "langchain-core>=0.3.66",
  "langchain-text-splitters>=0.3.8",
  "langgraph>=0.6.7",
  "loguru>=0.7.3",
  "markdownify>=1.2.0",
  "numpy>=2.3.0",
  "ollama>=0.6.0",
  "orjson>=3.11.1",
  "pandas>=2.3.0",
  "plotly>=6.1.2",
  "psutil>=7.0.0",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "pypdf>=5.7.0",
  "python-docx>=1.2.0",
  "python-dotenv>=1.1.1",
  "pyyaml>=6.0.2",
  "scikit-learn>=1.7.0",
  "sentence-transformers>=5.0.0",
  "streamlit>=1.46.1",
  "tenacity>=9.1.2",
  "tiktoken>=0.9.0",
  "typer>=0.16.0",
]

[dependency-groups]
dev = [
  "ipykernel>=6.29.5",
  "jupyter>=1.1.1",
  "nbformat>=5.10.4",
  "pytest>=8.4.1",
  "pytest-asyncio>=1.0.0",
  "pytest-cov>=6.2.1",
  "ruff>=0.12.2",
]

[project.scripts]
hybrid-ra = "hybrid_research_assistant.cli:app"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  ".venv/**",
  ".uv-cache/**",
  ".pytest_cache/**",
  ".ruff_cache/**",
  "data/web_cache/**",
  "outputs/**",
  "vectordb/**",
  "dist/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hybrid_research_assistant"]

[tool.hatch.build.targets.sdist]
only-include = [
  "src/hybrid_research_assistant",
  "streamlit_app",
  "tests",
  "scripts",
  "configs",
  "docs",
  "README.md",
  "pyproject.toml",
  ".env.example",
  "notebooks/project_18_hybrid_real_time_ai_research_assistant.ipynb",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "integration: requires running local services (Ollama, web, Chroma persistence)"
]

[tool.ruff]
line-length = 110
target-version = "py312"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "N"]
ignore = ["E501", "N999", "UP042"]
