[project]
name = "production-semantic-search-engine"
version = "0.1.0"
description = "Production-grade semantic and hybrid search engine with ChromaDB, reranking, and Streamlit UI."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
  { name = "Ahmad" }
]
dependencies = [
  "aiohttp>=3.10.0",
  "beautifulsoup4>=4.12.3",
  "chromadb>=0.5.5",
  "datasets>=2.20.0",
  "faiss-cpu>=1.8.0.post1",
  "langdetect>=1.0.9",
  "loguru>=0.7.2",
  "numba>=0.60.0",
  "nbformat>=5.10.4",
  "numpy>=1.26.4",
  "pandas>=2.2.2",
  "plotly>=5.23.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.3.4",
  "pypdf>=4.3.1",
  "python-docx>=1.1.2",
  "pyyaml>=6.0.2",
  "rank-bm25>=0.2.2",
  "requests>=2.32.3",
  "scikit-learn>=1.5.1",
  "sentence-transformers>=3.0.1",
  "streamlit>=1.37.1",
  "tiktoken>=0.7.0",
  "tqdm>=4.66.5",
  "typer>=0.12.3",
  "umap-learn>=0.5.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.5",
]

[project.scripts]
semantic-search = "semantic_search.cli:app"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/semantic_search"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E203", "E501", "I001", "UP035", "UP037"]
