[project]
name = "production-peft-platform"
version = "0.1.0"
description = "Production-grade PEFT fine-tuning platform with LoRA, QLoRA, Unsloth, FastAPI, Streamlit, and MLflow"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "pyyaml>=6.0.2",
  "hydra-core>=1.3.2",
  "omegaconf>=2.3.0",
  "fastapi>=0.111.1",
  "uvicorn>=0.30.3",
  "streamlit>=1.36.0",
  "httpx>=0.27.0",
  "numpy>=2.0.1",
  "pandas>=2.2.2",
  "scikit-learn>=1.5.1",
  "matplotlib>=3.9.1",
  "plotly>=5.23.0",
  "mlflow>=2.15.1",
  "optuna>=3.6.1",
  "torch>=2.4.0",
  "transformers>=4.43.4",
  "datasets>=2.20.0",
  "peft>=0.12.0",
  "trl>=0.9.6",
  "accelerate>=0.33.0",
  "bitsandbytes>=0.43.3",
  "safetensors>=0.4.3",
  "evaluate>=0.4.2",
  "sentencepiece>=0.2.0",
  "onnxruntime>=1.18.1",
  "torchmetrics>=1.4.0",
]

[project.optional-dependencies]
unsloth = ["unsloth>=2025.6.0"]
flash = ["flash-attn>=2.6.3"]
gptq = ["auto-gptq>=0.7.1"]
awq = ["autoawq>=0.2.6"]
vllm = ["vllm>=0.6.0"]
dev = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.5.5",
  "mypy>=1.11.1",
  "types-pyyaml>=6.0.12.20241230",
]

[project.scripts]
peft-platform = "peft_platform.cli.main:app"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/peft_platform"]

[tool.hatch.build.targets.sdist]
include = ["src/peft_platform", "README.md", "pyproject.toml", "configs", "docs", "notebooks", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "W"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
show_error_codes = true
mypy_path = "src"
