[project]
name = "build-your-first-ai-app-ui-with-streamlit"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12.10"
dependencies = [
    "chromadb>=1.5.9",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "langchain-community>=0.4.2",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "ollama>=0.6.2",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.10",
    "pillow>=12.2.0",
    "plotly>=6.8.0",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
