[project]
name = "deploy-ai-app"
version = "1.0.0"
description = "Project #7: deployment portfolio with Streamlit-first delivery and optional FastAPI ML serving track"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "streamlit>=1.58.0",
    "requests>=2.34.0",
    "numpy>=2.5.0",
    "pandas>=3.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "scikit-learn>=1.9.0",
    "joblib>=1.5.3",
]
automl = [
    "xgboost>=2.1.0",
    "lightgbm>=4.5.0",
    "catboost>=1.2.8",
    "flaml>=2.3.0",
    "lazypredict>=0.2.16",
    "shap>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "nbformat>=5.10.4",
    "nbclient>=0.11.0",
    "jupyter>=1.1.1",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "psutil>=7.2.2",
]

[tool.setuptools.packages.find]
include = ["streamlit_app*", "ml_api*"]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
environments = ["sys_platform == 'linux'"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["--ignore=tests/api"]
filterwarnings = [
    "ignore:Setting the shape on a NumPy array has been deprecated:DeprecationWarning",
]
