[project]
name = "ml-api-deployment"
version = "1.0.0"
description = "Deploy Your First ML Model as a REST API"
requires-python = "==3.12.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.0.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "loguru>=0.7.0",
    "shap>=0.46.0",
    "httpx>=0.27.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[project.optional-dependencies]
train = [
    "lazypredict>=0.2.0",
    "flaml>=2.1.0",
    "pycaret>=3.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",
    "onnx>=1.16.0",
    "skl2onnx>=1.17.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "jupyter>=1.0.0",
    "nbformat>=5.9.0",
    "nbconvert>=7.16.0",
    "psutil>=6.0.0",
]

[tool.setuptools.packages.find]
include = ["app", "app.*", "src", "src.*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "BLE", "RET", "SIM", "ARG", "PTH", "PD", "PL"]
ignore = ["S101", "PLR2004", "SIM108", "N815"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:shap.*:",
    "ignore::PendingDeprecationWarning:shap.*:",
    "ignore::UserWarning:shap.*:",
    "ignore:.*Using `httpx` with `starlette.testclient`.*",
]

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"
